finish left side of the page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://yarn.pm/normalize.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Sign-up page</title>
 </head>
 <body>
-    
+    <div class="page">
+        <div class="left-page">
+            <div class="banner">
+                <img src="./images/logo.png" alt="">
+                <div class="word">SIGN-UP</div>
+            </div>
+            <div class="footer">Photo by <a href="https://unsplash.com/@marinolinic">Marino Linic</a> on <a href="https://unsplash.com/photos/G1w-i6B5uKU">Unsplash</a></div>
+        </div>
+        <div class="right-page">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis saepe magni minus cupiditate ullam dicta dolore quae, sapiente nihil omnis, quas officiis eius asperiores reiciendis earum sed? Incidunt, doloribus reiciendis!
+        </div>
+    </div>
 </body>
 </html>
