--- a/index.html
+++ b/index.html
@@ -18,7 +18,53 @@
             <div class="footer">Photo by <a href="https://unsplash.com/@marinolinic">Marino Linic</a> on <a href="https://unsplash.com/photos/G1w-i6B5uKU">Unsplash</a></div>
         </div>
         <div class="right-page">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis saepe magni minus cupiditate ullam dicta dolore quae, sapiente nihil omnis, quas officiis eius asperiores reiciendis earum sed? Incidunt, doloribus reiciendis!
+            <div class="intro">
+                <h1>This is not a real online service!</h1>
+                <h1>You know you need something like this to help you fulfill yourself.</h1>
+                <h1>Sign up <strong>now</strong> to get started!</h1>
+            </div>
+            <div class="form">
+                <form action="" method="post">
+                    <fieldset>
+                        <legend>Let's do this!</legend>
+                        <div class="form-row">
+                            <div class="form-row-item">
+                                <label for="firstname">FIRST NAME</label>
+                                <input type="text" id="firstname" name="firstname">
+                            </div>
+                            <div class="form-row-item">
+                                <label for="lastname">LAST NAME</label>
+                                <input type="text" id="lastname" name="lastname">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-row-item">
+                                <label for="email">EMAIL*</label>
+                                <input type="email" id="email" name="email" required>
+                            </div>
+                            <div class="form-row-item">
+                                <label for="phone">PHONE NUMBER</label>
+                                <input type="tel" id="phone" name="phone" maxlength="10">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-row-item">
+                                <label for="password">PASSWORD*</label>
+                                <input type="password" id="password" name="password" required>
+                            </div>
+                            <div class="form-row-item">
+                                <label for="password2">CONFIRM PASSWORD*</label>
+                                <input type="password" id="password2" name="password2" required>
+                            </div>
+                        </div>
+                    </fieldset>
+                    <div class="form-submit">
+                        <button type="submit">Create Account</button>
+                        <p>Already have an account? <a href="">Log In</a></p>
+                    </div>
+                       
+                </form>
+            </div>
         </div>
     </div>
 </body>
