add pattern on phone number input

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             </div>
                             <div class="form-row-item">
                                 <label for="phone">PHONE NUMBER</label>
-                                <input type="tel" id="phone" name="phone" maxlength="10">
+                                <input type="tel" id="phone" name="phone" maxlength="10" pattern="\d+">
                             </div>
                         </div>
                         <div class="form-row">
